@@ -16,23 +16,32 @@
  */
 package org.apache.dubbo.common.utils;
 
-import org.apache.dubbo.common.logger.Logger;
+import org.apache.dubbo.common.config.ConfigurationUtils;
+import org.apache.dubbo.common.constants.CommonConstants;
+import org.apache.dubbo.common.logger.ErrorTypeAwareLogger;
 import org.apache.dubbo.common.logger.LoggerFactory;
+import org.apache.dubbo.rpc.model.ApplicationModel;
 
 import java.lang.reflect.Array;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
+import java.lang.reflect.GenericArrayType;
 import java.lang.reflect.InvocationHandler;
-import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Proxy;
 import java.lang.reflect.Type;
+import java.lang.reflect.TypeVariable;
+import java.lang.reflect.WildcardType;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Hashtable;
@@ -40,12 +49,19 @@ import java.util.IdentityHashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.Properties;
 import java.util.TreeMap;
 import java.util.WeakHashMap;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.ConcurrentSkipListMap;
+import java.util.function.Consumer;
+import java.util.function.Supplier;
+
+import static org.apache.dubbo.common.constants.LoggerCodeConstants.COMMON_REFLECTIVE_OPERATION_FAILED;
+import static org.apache.dubbo.common.utils.ClassUtils.isAssignableFrom;
 
 /**
  * PojoUtils. Travel object deeply, and convert complex type to simple type.
@@ -58,12 +74,31 @@ import java.util.concurrent.ConcurrentSkipListMap;
  * </ul>
  * <p/>
  * Other type will be covert to a map which contains the attributes and value pair of object.
+ * <p>
+ * TODO: exact PojoUtils to scope bean
  */
 public class PojoUtils {
 
-    private static final Logger logger = LoggerFactory.getLogger(PojoUtils.class);
-    private static final ConcurrentMap<String, Method> NAME_METHODS_CACHE = new ConcurrentHashMap<String, Method>();
-    private static final ConcurrentMap<Class<?>, ConcurrentMap<String, Field>> CLASS_FIELD_CACHE = new ConcurrentHashMap<Class<?>, ConcurrentMap<String, Field>>();
+    private static final ErrorTypeAwareLogger logger = LoggerFactory.getErrorTypeAwareLogger(PojoUtils.class);
+    private static final ConcurrentMap<String, Method> NAME_METHODS_CACHE = new ConcurrentHashMap<>();
+    private static final ConcurrentMap<Class<?>, ConcurrentMap<String, Field>> CLASS_FIELD_CACHE =
+            new ConcurrentHashMap<>();
+
+    private static final ConcurrentMap<String, Object> CLASS_NOT_FOUND_CACHE = new ConcurrentHashMap<>();
+
+    private static final Object NOT_FOUND_VALUE = new Object();
+    private static final boolean GENERIC_WITH_CLZ = Boolean.parseBoolean(ConfigurationUtils.getProperty(
+            ApplicationModel.defaultModel(), CommonConstants.GENERIC_WITH_CLZ_KEY, "true"));
+
+    private static final List<Class<?>> CLASS_CAN_BE_STRING = Arrays.asList(
+            Byte.class,
+            Short.class,
+            Integer.class,
+            Long.class,
+            Float.class,
+            Double.class,
+            Boolean.class,
+            Character.class);
 
     public static Object[] generalize(Object[] objs) {
         Object[] dests = new Object[objs.length];
@@ -98,7 +133,7 @@ public class PojoUtils {
     }
 
     public static Object generalize(Object pojo) {
-        return generalize(pojo, new IdentityHashMap<Object, Object>());
+        return generalize(pojo, new IdentityHashMap<>());
     }
 
     @SuppressWarnings("unchecked")
@@ -110,7 +145,8 @@ public class PojoUtils {
         if (pojo instanceof Enum<?>) {
             return ((Enum<?>) pojo).name();
         }
-        if (pojo.getClass().isArray() && Enum.class.isAssignableFrom(pojo.getClass().getComponentType())) {
+        if (pojo.getClass().isArray()
+                && Enum.class.isAssignableFrom(pojo.getClass().getComponentType())) {
             int len = Array.getLength(pojo);
             String[] values = new String[len];
             for (int i = 0; i < len; i++) {
@@ -121,6 +157,10 @@ public class PojoUtils {
 
         if (ReflectUtils.isPrimitives(pojo.getClass())) {
             return pojo;
+        }
+
+        if (pojo instanceof LocalDate || pojo instanceof LocalDateTime || pojo instanceof LocalTime) {
+            return pojo.toString();
         }
 
         if (pojo instanceof Class) {
@@ -146,7 +186,7 @@ public class PojoUtils {
         if (pojo instanceof Collection<?>) {
             Collection<Object> src = (Collection<Object>) pojo;
             int len = src.size();
-            Collection<Object> dest = (pojo instanceof List<?>) ? new ArrayList<Object>(len) : new HashSet<Object>(len);
+            Collection<Object> dest = (pojo instanceof List<?>) ? new ArrayList<>(len) : new HashSet<>(len);
             history.put(pojo, dest);
             for (Object obj : src) {
                 dest.add(generalize(obj, history));
@@ -162,13 +202,18 @@ public class PojoUtils {
             }
             return dest;
         }
-        Map<String, Object> map = new HashMap<String, Object>();
+        Map<String, Object> map = new HashMap<>();
         history.put(pojo, map);
-        map.put("class", pojo.getClass().getName());
+        if (GENERIC_WITH_CLZ) {
+            map.put("class", pojo.getClass().getName());
+        }
         for (Method method : pojo.getClass().getMethods()) {
             if (ReflectUtils.isBeanPropertyReadMethod(method)) {
+                ReflectUtils.makeAccessible(method);
                 try {
-                    map.put(ReflectUtils.getPropertyNameFromBeanReadMethod(method), generalize(method.invoke(pojo), history));
+                    map.put(
+                            ReflectUtils.getPropertyNameFromBeanReadMethod(method),
+                            generalize(method.invoke(pojo), history));
                 } catch (Exception e) {
                     throw new RuntimeException(e.getMessage(), e);
                 }
@@ -198,16 +243,16 @@ public class PojoUtils {
     }
 
     public static Object realize(Object pojo, Class<?> type) {
-        return realize0(pojo, type, null, new IdentityHashMap<Object, Object>());
+        return realize0(pojo, type, null, new IdentityHashMap<>());
     }
 
     public static Object realize(Object pojo, Class<?> type, Type genericType) {
-        return realize0(pojo, type, genericType, new IdentityHashMap<Object, Object>());
+        return realize0(pojo, type, genericType, new IdentityHashMap<>());
     }
 
     private static class PojoInvocationHandler implements InvocationHandler {
 
-        private Map<Object, Object> map;
+        private final Map<Object, Object> map;
 
         public PojoInvocationHandler(Map<Object, Object> map) {
             this.map = map;
@@ -229,7 +274,7 @@ public class PojoUtils {
                 value = map.get(methodName.substring(0, 1).toLowerCase() + methodName.substring(1));
             }
             if (value instanceof Map<?, ?> && !Map.class.isAssignableFrom(method.getReturnType())) {
-                value = realize0((Map<String, Object>) value, method.getReturnType(), null, new IdentityHashMap<Object, Object>());
+                value = realize0(value, method.getReturnType(), null, new IdentityHashMap<>());
             }
             return value;
         }
@@ -238,19 +283,19 @@ public class PojoUtils {
     @SuppressWarnings("unchecked")
     private static Collection<Object> createCollection(Class<?> type, int len) {
         if (type.isAssignableFrom(ArrayList.class)) {
-            return new ArrayList<Object>(len);
+            return new ArrayList<>(len);
         }
         if (type.isAssignableFrom(HashSet.class)) {
-            return new HashSet<Object>(len);
+            return new HashSet<>(len);
         }
         if (!type.isInterface() && !Modifier.isAbstract(type.getModifiers())) {
             try {
-                return (Collection<Object>) type.newInstance();
+                return (Collection<Object>) type.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 // ignore
             }
         }
-        return new ArrayList<Object>();
+        return new ArrayList<>();
     }
 
     private static Map createMap(Map src) {
@@ -276,19 +321,23 @@ public class PojoUtils {
             result = new ConcurrentSkipListMap();
         } else {
             try {
-                result = cl.newInstance();
-            } catch (Exception e) { /* ignore */ }
+                result = cl.getDeclaredConstructor().newInstance();
+            } catch (Exception e) {
+                /* ignore */
+            }
 
             if (result == null) {
                 try {
                     Constructor<?> constructor = cl.getConstructor(Map.class);
                     result = (Map) constructor.newInstance(Collections.EMPTY_MAP);
-                } catch (Exception e) { /* ignore */ }
+                } catch (Exception e) {
+                    /* ignore */
+                }
             }
         }
 
         if (result == null) {
-            result = new HashMap<Object, Object>();
+            result = new HashMap<>();
         }
 
         return result;
@@ -296,6 +345,15 @@ public class PojoUtils {
 
     @SuppressWarnings({"unchecked", "rawtypes"})
     private static Object realize0(Object pojo, Class<?> type, Type genericType, final Map<Object, Object> history) {
+        return realize1(pojo, type, genericType, new HashMap<>(8), history);
+    }
+
+    private static Object realize1(
+            Object pojo,
+            Class<?> type,
+            Type genericType,
+            final Map<String, Type> mapParent,
+            final Map<Object, Object> history) {
         if (pojo == null) {
             return null;
         }
@@ -305,9 +363,10 @@ public class PojoUtils {
         }
 
         if (ReflectUtils.isPrimitives(pojo.getClass())
-                && !(type != null && type.isArray()
-                && type.getComponentType().isEnum()
-                && pojo.getClass() == String[].class)) {
+                && !(type != null
+                        && type.isArray()
+                        && type.getComponentType().isEnum()
+                        && pojo.getClass() == String[].class)) {
             return CompatibleTypeUtils.compatibleTypeConvert(pojo, type);
         }
 
@@ -319,6 +378,19 @@ public class PojoUtils {
 
         history.put(pojo, pojo);
 
+        Map<String, Type> mapGeneric = new HashMap<>(8);
+        mapGeneric.putAll(mapParent);
+        TypeVariable<? extends Class<?>>[] typeParameters = type.getTypeParameters();
+        if (genericType instanceof ParameterizedType && typeParameters.length > 0) {
+            ParameterizedType parameterizedType = (ParameterizedType) genericType;
+            Type[] actualTypeArguments = parameterizedType.getActualTypeArguments();
+            for (int i = 0; i < typeParameters.length; i++) {
+                if (!(actualTypeArguments[i] instanceof TypeVariable)) {
+                    mapGeneric.put(typeParameters[i].getTypeName(), actualTypeArguments[i]);
+                }
+            }
+        }
+
         if (pojo.getClass().isArray()) {
             if (Collection.class.isAssignableFrom(type)) {
                 Class<?> ctype = pojo.getClass().getComponentType();
@@ -327,18 +399,20 @@ public class PojoUtils {
                 history.put(pojo, dest);
                 for (int i = 0; i < len; i++) {
                     Object obj = Array.get(pojo, i);
-                    Object value = realize0(obj, ctype, null, history);
+                    Object value = realize1(obj, ctype, null, mapGeneric, history);
                     dest.add(value);
                 }
                 return dest;
             } else {
-                Class<?> ctype = (type != null && type.isArray() ? type.getComponentType() : pojo.getClass().getComponentType());
+                Class<?> ctype = (type != null && type.isArray()
+                        ? type.getComponentType()
+                        : pojo.getClass().getComponentType());
                 int len = Array.getLength(pojo);
                 Object dest = Array.newInstance(ctype, len);
                 history.put(pojo, dest);
                 for (int i = 0; i < len; i++) {
                     Object obj = Array.get(pojo, i);
-                    Object value = realize0(obj, ctype, null, history);
+                    Object value = realize1(obj, ctype, null, mapGeneric, history);
                     Array.set(dest, i, value);
                 }
                 return dest;
@@ -354,7 +428,7 @@ public class PojoUtils {
                 history.put(pojo, dest);
                 int i = 0;
                 for (Object obj : src) {
-                    Object value = realize0(obj, ctype, null, history);
+                    Object value = realize1(obj, ctype, null, mapGeneric, history);
                     Array.set(dest, i, value);
                     i++;
                 }
@@ -370,7 +444,7 @@ public class PojoUtils {
                     if (keyType instanceof Class) {
                         keyClazz = (Class<?>) keyType;
                     }
-                    Object value = realize0(obj, keyClazz, keyType, history);
+                    Object value = realize1(obj, keyClazz, keyType, mapGeneric, history);
                     dest.add(value);
                 }
                 return dest;
@@ -380,10 +454,13 @@ public class PojoUtils {
         if (pojo instanceof Map<?, ?> && type != null) {
             Object className = ((Map<Object, Object>) pojo).get("class");
             if (className instanceof String) {
-                try {
-                    type = ClassUtils.forName((String) className);
-                } catch (ClassNotFoundException e) {
-                    // ignore
+                if (!CLASS_NOT_FOUND_CACHE.containsKey(className)) {
+                    try {
+                        type = DefaultSerializeClassChecker.getInstance()
+                                .loadClass(ClassUtils.getClassLoader(), (String) className);
+                    } catch (ClassNotFoundException e) {
+                        CLASS_NOT_FOUND_CACHE.put((String) className, NOT_FOUND_VALUE);
+                    }
                 }
             }
 
@@ -391,19 +468,25 @@ public class PojoUtils {
             if (type.isEnum()) {
                 Object name = ((Map<Object, Object>) pojo).get("name");
                 if (name != null) {
-                    return Enum.valueOf((Class<Enum>) type, name.toString());
+                    if (!(name instanceof String)) {
+                        throw new IllegalArgumentException("`name` filed should be string!");
+                    } else {
+                        return Enum.valueOf((Class<Enum>) type, (String) name);
+                    }
                 }
             }
             Map<Object, Object> map;
             // when return type is not the subclass of return type from the signature and not an interface
             if (!type.isInterface() && !type.isAssignableFrom(pojo.getClass())) {
                 try {
-                    map = (Map<Object, Object>) type.newInstance();
+                    map = (Map<Object, Object>) type.getDeclaredConstructor().newInstance();
                     Map<Object, Object> mapPojo = (Map<Object, Object>) pojo;
                     map.putAll(mapPojo);
-                    map.remove("class");
+                    if (GENERIC_WITH_CLZ) {
+                        map.remove("class");
+                    }
                 } catch (Exception e) {
-                    //ignore error
+                    // ignore error
                     map = (Map<Object, Object>) pojo;
                 }
             } else {
@@ -411,7 +494,19 @@ public class PojoUtils {
             }
 
             if (Map.class.isAssignableFrom(type) || type == Object.class) {
-                final Map<Object, Object> result = createMap(map);
+                final Map<Object, Object> result;
+                // fix issue#5939
+                Type mapKeyType = getKeyTypeForMap(map.getClass());
+                Type typeKeyType = getGenericClassByIndex(genericType, 0);
+                boolean typeMismatch = mapKeyType instanceof Class
+                        && typeKeyType instanceof Class
+                        && !typeKeyType.getTypeName().equals(mapKeyType.getTypeName());
+                if (typeMismatch) {
+                    result = createMap(new HashMap(0));
+                } else {
+                    result = createMap(map);
+                }
+
                 history.put(pojo, result);
                 for (Map.Entry<Object, Object> entry : map.entrySet()) {
                     Type keyType = getGenericClassByIndex(genericType, 0);
@@ -422,7 +517,8 @@ public class PojoUtils {
                     } else if (keyType instanceof ParameterizedType) {
                         keyClazz = (Class<?>) ((ParameterizedType) keyType).getRawType();
                     } else {
-                        keyClazz = entry.getKey() == null ? null : entry.getKey().getClass();
+                        keyClazz =
+                                entry.getKey() == null ? null : entry.getKey().getClass();
                     }
                     Class<?> valueClazz;
                     if (valueType instanceof Class) {
@@ -430,21 +526,42 @@ public class PojoUtils {
                     } else if (valueType instanceof ParameterizedType) {
                         valueClazz = (Class<?>) ((ParameterizedType) valueType).getRawType();
                     } else {
-                        valueClazz = entry.getValue() == null ? null : entry.getValue().getClass();
+                        valueClazz = entry.getValue() == null
+                                ? null
+                                : entry.getValue().getClass();
                     }
 
-                    Object key = keyClazz == null ? entry.getKey() : realize0(entry.getKey(), keyClazz, keyType, history);
-                    Object value = valueClazz == null ? entry.getValue() : realize0(entry.getValue(), valueClazz, valueType, history);
+                    Object key = keyClazz == null
+                            ? entry.getKey()
+                            : realize1(entry.getKey(), keyClazz, keyType, mapGeneric, history);
+                    Object value = valueClazz == null
+                            ? entry.getValue()
+                            : realize1(entry.getValue(), valueClazz, valueType, mapGeneric, history);
                     result.put(key, value);
                 }
                 return result;
             } else if (type.isInterface()) {
-                Object dest = Proxy.newProxyInstance(Thread.currentThread().getContextClassLoader(), new Class<?>[]{type}, new PojoInvocationHandler(map));
+                Object dest = Proxy.newProxyInstance(
+                        Thread.currentThread().getContextClassLoader(),
+                        new Class<?>[] {type},
+                        new PojoInvocationHandler(map));
                 history.put(pojo, dest);
                 return dest;
             } else {
-                Object dest = newInstance(type);
+                Object dest;
+                if (Throwable.class.isAssignableFrom(type)) {
+                    Object message = map.get("message");
+                    if (message instanceof String) {
+                        dest = newThrowableInstance(type, (String) message);
+                    } else {
+                        dest = newInstance(type);
+                    }
+                } else {
+                    dest = newInstance(type);
+                }
+
                 history.put(pojo, dest);
+
                 for (Map.Entry<Object, Object> entry : map.entrySet()) {
                     Object key = entry.getKey();
                     if (key instanceof String) {
@@ -452,42 +569,57 @@ public class PojoUtils {
                         Object value = entry.getValue();
                         if (value != null) {
                             Method method = getSetterMethod(dest.getClass(), name, value.getClass());
-                            Field field = getField(dest.getClass(), name);
+                            Field field = getAndCacheField(dest.getClass(), name);
                             if (method != null) {
                                 if (!method.isAccessible()) {
                                     method.setAccessible(true);
                                 }
-                                Type ptype = method.getGenericParameterTypes()[0];
-                                value = realize0(value, method.getParameterTypes()[0], ptype, history);
+                                Type containType = Optional.ofNullable(field)
+                                        .map(Field::getGenericType)
+                                        .map(Type::getTypeName)
+                                        .map(mapGeneric::get)
+                                        .orElse(null);
+                                if (containType != null) {
+                                    // is generic
+                                    if (containType instanceof ParameterizedType) {
+                                        value = realize1(
+                                                value,
+                                                (Class<?>) ((ParameterizedType) containType).getRawType(),
+                                                containType,
+                                                mapGeneric,
+                                                history);
+                                    } else if (containType instanceof Class) {
+                                        value = realize1(
+                                                value, (Class<?>) containType, containType, mapGeneric, history);
+                                    } else {
+                                        Type ptype = method.getGenericParameterTypes()[0];
+                                        value = realize1(
+                                                value, method.getParameterTypes()[0], ptype, mapGeneric, history);
+                                    }
+                                } else {
+                                    Type ptype = method.getGenericParameterTypes()[0];
+                                    value = realize1(value, method.getParameterTypes()[0], ptype, mapGeneric, history);
+                                }
                                 try {
                                     method.invoke(dest, value);
                                 } catch (Exception e) {
-                                    String exceptionDescription = "Failed to set pojo " + dest.getClass().getSimpleName() + " property " + name
-                                            + " value " + value + "(" + value.getClass() + "), cause: " + e.getMessage();
-                                    logger.error(exceptionDescription, e);
+                                    String exceptionDescription = "Failed to set pojo "
+                                            + dest.getClass().getSimpleName() + " property " + name + " value "
+                                            + value.getClass() + ", cause: " + e.getMessage();
+                                    logger.error(COMMON_REFLECTIVE_OPERATION_FAILED, "", "", exceptionDescription, e);
                                     throw new RuntimeException(exceptionDescription, e);
                                 }
                             } else if (field != null) {
-                                value = realize0(value, field.getType(), field.getGenericType(), history);
+                                value = realize1(value, field.getType(), field.getGenericType(), mapGeneric, history);
                                 try {
                                     field.set(dest, value);
                                 } catch (IllegalAccessException e) {
-                                    throw new RuntimeException("Failed to set field " + name + " of pojo " + dest.getClass().getName() + " : " + e.getMessage(), e);
+                                    throw new RuntimeException(
+                                            "Failed to set field " + name + " of pojo "
+                                                    + dest.getClass().getName() + " : " + e.getMessage(),
+                                            e);
                                 }
                             }
-                        }
-                    }
-                }
-                if (dest instanceof Throwable) {
-                    Object message = map.get("message");
-                    if (message instanceof String) {
-                        try {
-                            Field field = Throwable.class.getDeclaredField("detailMessage");
-                            if (!field.isAccessible()) {
-                                field.setAccessible(true);
-                            }
-                            field.set(dest, message);
-                        } catch (Exception e) {
                         }
                     }
                 }
@@ -495,6 +627,28 @@ public class PojoUtils {
             }
         }
         return pojo;
+    }
+
+    /**
+     * Get key type for {@link Map} directly implemented by {@code clazz}.
+     * If {@code clazz} does not implement {@link Map} directly, return {@code null}.
+     *
+     * @param clazz {@link Class}
+     * @return Return String.class for {@link com.alibaba.fastjson.JSONObject}
+     */
+    private static Type getKeyTypeForMap(Class<?> clazz) {
+        Type[] interfaces = clazz.getGenericInterfaces();
+        if (!ArrayUtils.isEmpty(interfaces)) {
+            for (Type type : interfaces) {
+                if (type instanceof ParameterizedType) {
+                    ParameterizedType t = (ParameterizedType) type;
+                    if ("java.util.Map".equals(t.getRawType().getTypeName())) {
+                        return t.getActualTypeArguments()[0];
+                    }
+                }
+            }
+        }
+        return null;
     }
 
     /**
@@ -515,57 +669,65 @@ public class PojoUtils {
         return clazz;
     }
 
+    private static Object newThrowableInstance(Class<?> cls, String message) {
+        try {
+            Constructor<?> messagedConstructor = cls.getDeclaredConstructor(String.class);
+            return messagedConstructor.newInstance(message);
+        } catch (Exception t) {
+            return newInstance(cls);
+        }
+    }
+
     private static Object newInstance(Class<?> cls) {
         try {
-            return cls.newInstance();
-        } catch (Throwable t) {
-            try {
-                Constructor<?>[] constructors = cls.getDeclaredConstructors();
-                /**
-                 * From Javadoc java.lang.Class#getDeclaredConstructors
-                 * This method returns an array of Constructor objects reflecting all the constructors
-                 * declared by the class represented by this Class object.
-                 * This method returns an array of length 0,
-                 * if this Class object represents an interface, a primitive type, an array class, or void.
-                 */
-                if (constructors.length == 0) {
-                    throw new RuntimeException("Illegal constructor: " + cls.getName());
-                }
-                Constructor<?> constructor = constructors[0];
-                if (constructor.getParameterTypes().length > 0) {
-                    for (Constructor<?> c : constructors) {
-                        if (c.getParameterTypes().length < constructor.getParameterTypes().length) {
-                            constructor = c;
-                            if (constructor.getParameterTypes().length == 0) {
-                                break;
-                            }
-                        }
-                    }
-                }
-                constructor.setAccessible(true);
-                Object[] parameters = Arrays.stream(constructor.getParameterTypes()).map(PojoUtils::getDefaultValue).toArray();
-                return constructor.newInstance(parameters);
-            } catch (InstantiationException e) {
-                throw new RuntimeException(e.getMessage(), e);
-            } catch (IllegalAccessException e) {
-                throw new RuntimeException(e.getMessage(), e);
-            } catch (InvocationTargetException e) {
-                throw new RuntimeException(e.getMessage(), e);
+            return cls.getDeclaredConstructor().newInstance();
+        } catch (Exception t) {
+            Constructor<?>[] constructors = cls.getDeclaredConstructors();
+            /*
+             From Javadoc java.lang.Class#getDeclaredConstructors
+             This method returns an array of Constructor objects reflecting all the constructors
+             declared by the class represented by this Class object.
+             This method returns an array of length 0,
+             if this Class object represents an interface, a primitive type, an array class, or void.
+            */
+            if (constructors.length == 0) {
+                throw new RuntimeException("Illegal constructor: " + cls.getName());
             }
+            Throwable lastError = null;
+            Arrays.sort(constructors, Comparator.comparingInt(a -> a.getParameterTypes().length));
+            for (Constructor<?> constructor : constructors) {
+                try {
+                    constructor.setAccessible(true);
+                    Object[] parameters = Arrays.stream(constructor.getParameterTypes())
+                            .map(PojoUtils::getDefaultValue)
+                            .toArray();
+                    return constructor.newInstance(parameters);
+                } catch (Exception e) {
+                    lastError = e;
+                }
+            }
+            throw new RuntimeException(lastError.getMessage(), lastError);
         }
     }
 
     /**
      * return init value
+     *
      * @param parameterType
      * @return
      */
     private static Object getDefaultValue(Class<?> parameterType) {
-        if (parameterType.getName().equals("char")) {
+        if ("char".equals(parameterType.getName())) {
             return Character.MIN_VALUE;
         }
-        if (parameterType.getName().equals("bool")) {
+        if ("boolean".equals(parameterType.getName())) {
             return false;
+        }
+        if ("byte".equals(parameterType.getName())) {
+            return (byte) 0;
+        }
+        if ("short".equals(parameterType.getName())) {
+            return (short) 0;
         }
         return parameterType.isPrimitive() ? 0 : null;
     }
@@ -580,6 +742,7 @@ public class PojoUtils {
                 for (Method m : cls.getMethods()) {
                     if (ReflectUtils.isBeanPropertyWriteMethod(m) && m.getName().equals(name)) {
                         method = m;
+                        break;
                     }
                 }
             }
@@ -590,30 +753,40 @@ public class PojoUtils {
         return method;
     }
 
-    private static Field getField(Class<?> cls, String fieldName) {
-        Field result = null;
+    private static Field getAndCacheField(Class<?> cls, String fieldName) {
+        Field result;
         if (CLASS_FIELD_CACHE.containsKey(cls) && CLASS_FIELD_CACHE.get(cls).containsKey(fieldName)) {
             return CLASS_FIELD_CACHE.get(cls).get(fieldName);
         }
-        try {
-            result = cls.getDeclaredField(fieldName);
-            result.setAccessible(true);
-        } catch (NoSuchFieldException e) {
+
+        result = getField(cls, fieldName);
+
+        if (result != null) {
+            ConcurrentMap<String, Field> fields =
+                    CLASS_FIELD_CACHE.computeIfAbsent(cls, k -> new ConcurrentHashMap<>());
+            fields.putIfAbsent(fieldName, result);
+        }
+        return result;
+    }
+
+    private static Field getField(Class<?> cls, String fieldName) {
+        Field result = null;
+        for (Class<?> acls = cls; acls != null; acls = acls.getSuperclass()) {
+            try {
+                result = acls.getDeclaredField(fieldName);
+                if (!Modifier.isPublic(result.getModifiers())) {
+                    result.setAccessible(true);
+                }
+            } catch (NoSuchFieldException e) {
+            }
+        }
+        if (result == null && cls != null) {
             for (Field field : cls.getFields()) {
                 if (fieldName.equals(field.getName()) && ReflectUtils.isPublicInstanceField(field)) {
                     result = field;
                     break;
                 }
             }
-        }
-        if (result != null) {
-            ConcurrentMap<String, Field> fields = CLASS_FIELD_CACHE.get(cls);
-            if (fields == null) {
-                fields = new ConcurrentHashMap<String, Field>();
-                CLASS_FIELD_CACHE.putIfAbsent(cls, fields);
-            }
-            fields = CLASS_FIELD_CACHE.get(cls);
-            fields.putIfAbsent(fieldName, result);
         }
         return result;
     }
@@ -624,4 +797,112 @@ public class PojoUtils {
                 && !Map.class.isAssignableFrom(cls);
     }
 
+    /**
+     * Update the property if absent
+     *
+     * @param getterMethod the getter method
+     * @param setterMethod the setter method
+     * @param newValue     the new value
+     * @param <T>          the value type
+     * @since 2.7.8
+     */
+    public static <T> void updatePropertyIfAbsent(Supplier<T> getterMethod, Consumer<T> setterMethod, T newValue) {
+        if (newValue != null && getterMethod.get() == null) {
+            setterMethod.accept(newValue);
+        }
+    }
+
+    /**
+     * convert map to a specific class instance
+     *
+     * @param map map wait for convert
+     * @param cls the specified class
+     * @param <T> the type of {@code cls}
+     * @return class instance declare in param {@code cls}
+     * @throws ReflectiveOperationException if the instance creation is failed
+     * @since 2.7.10
+     */
+    public static <T> T mapToPojo(Map<String, Object> map, Class<T> cls) throws ReflectiveOperationException {
+        T instance = cls.getDeclaredConstructor().newInstance();
+        Map<String, Field> beanPropertyFields = ReflectUtils.getBeanPropertyFields(cls);
+        for (Map.Entry<String, Field> entry : beanPropertyFields.entrySet()) {
+            String name = entry.getKey();
+            Field field = entry.getValue();
+            Object mapObject = map.get(name);
+            if (mapObject == null) {
+                continue;
+            }
+
+            Type type = field.getGenericType();
+            Object fieldObject = getFieldObject(mapObject, type);
+            field.set(instance, fieldObject);
+        }
+
+        return instance;
+    }
+
+    private static Object getFieldObject(Object mapObject, Type fieldType) throws ReflectiveOperationException {
+        if (fieldType instanceof Class<?>) {
+            return convertClassType(mapObject, (Class<?>) fieldType);
+        } else if (fieldType instanceof ParameterizedType) {
+            return convertParameterizedType(mapObject, (ParameterizedType) fieldType);
+        } else if (fieldType instanceof GenericArrayType
+                || fieldType instanceof TypeVariable<?>
+                || fieldType instanceof WildcardType) {
+            // ignore these type currently
+            return null;
+        } else {
+            throw new IllegalArgumentException("Unrecognized Type: " + fieldType.toString());
+        }
+    }
+
+    @SuppressWarnings("unchecked")
+    private static Object convertClassType(Object mapObject, Class<?> type) throws ReflectiveOperationException {
+        if (type.isPrimitive() || isAssignableFrom(type, mapObject.getClass())) {
+            return mapObject;
+        } else if (Objects.equals(type, String.class) && CLASS_CAN_BE_STRING.contains(mapObject.getClass())) {
+            // auto convert specified type to string
+            return mapObject.toString();
+        } else if (mapObject instanceof Map) {
+            return mapToPojo((Map<String, Object>) mapObject, type);
+        } else {
+            // type didn't match and mapObject is not another Map struct.
+            // we just ignore this situation.
+            return null;
+        }
+    }
+
+    @SuppressWarnings("unchecked")
+    private static Object convertParameterizedType(Object mapObject, ParameterizedType type)
+            throws ReflectiveOperationException {
+        Type rawType = type.getRawType();
+        if (!isAssignableFrom((Class<?>) rawType, mapObject.getClass())) {
+            return null;
+        }
+
+        Type[] actualTypeArguments = type.getActualTypeArguments();
+        if (isAssignableFrom(Map.class, (Class<?>) rawType)) {
+            Map<Object, Object> map = (Map<Object, Object>)
+                    mapObject.getClass().getDeclaredConstructor().newInstance();
+            for (Map.Entry<Object, Object> entry : ((Map<Object, Object>) mapObject).entrySet()) {
+                Object key = getFieldObject(entry.getKey(), actualTypeArguments[0]);
+                Object value = getFieldObject(entry.getValue(), actualTypeArguments[1]);
+                map.put(key, value);
+            }
+
+            return map;
+        } else if (isAssignableFrom(Collection.class, (Class<?>) rawType)) {
+            Collection<Object> collection = (Collection<Object>)
+                    mapObject.getClass().getDeclaredConstructor().newInstance();
+            for (Object m : (Iterable<?>) mapObject) {
+                Object ele = getFieldObject(m, actualTypeArguments[0]);
+                collection.add(ele);
+            }
+
+            return collection;
+        } else {
+            // ignore other type currently
+            return null;
+        }
+    }
 }
