@@ -22,18 +22,18 @@ import org.apache.dubbo.common.logger.log4j.Log4jLoggerAdapter;
 import org.apache.dubbo.common.logger.log4j2.Log4j2LoggerAdapter;
 import org.apache.dubbo.common.logger.slf4j.Slf4jLoggerAdapter;
 
+import java.lang.reflect.InvocationTargetException;
+import java.util.stream.Stream;
+
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
-
-import java.util.stream.Stream;
 
 import static org.hamcrest.CoreMatchers.not;
 import static org.hamcrest.CoreMatchers.nullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
 
-
-public class LoggerTest {
+class LoggerTest {
 
     static Stream<Arguments> data() {
         return Stream.of(
@@ -41,21 +41,26 @@ public class LoggerTest {
                 Arguments.of(JdkLoggerAdapter.class),
                 Arguments.of(Log4jLoggerAdapter.class),
                 Arguments.of(Slf4jLoggerAdapter.class),
-                Arguments.of(Log4j2LoggerAdapter.class)
-        );
+                Arguments.of(Log4j2LoggerAdapter.class));
     }
 
     @ParameterizedTest
     @MethodSource("data")
-    public void testAllLogMethod(Class<? extends LoggerAdapter> loggerAdapter) throws Exception {
-        LoggerAdapter adapter = loggerAdapter.newInstance();
+    void testAllLogMethod(Class<? extends LoggerAdapter> loggerAdapter) throws Exception {
+        LoggerAdapter adapter = loggerAdapter.getDeclaredConstructor().newInstance();
         adapter.setLevel(Level.ALL);
         Logger logger = adapter.getLogger(this.getClass());
         logger.error("error");
         logger.warn("warn");
         logger.info("info");
         logger.debug("debug");
-        logger.trace("info");
+        logger.trace("trace");
+
+        logger.error("error:{}", "arg1");
+        logger.warn("warn:{}", "arg1");
+        logger.info("info:{}", "arg1");
+        logger.debug("debug:{}", "arg1");
+        logger.trace("trace:{}", "arg1");
 
         logger.error(new Exception("error"));
         logger.warn(new Exception("warn"));
@@ -68,12 +73,19 @@ public class LoggerTest {
         logger.info("info", new Exception("info"));
         logger.debug("debug", new Exception("debug"));
         logger.trace("trace", new Exception("trace"));
+
+        logger.error("error:{}", "arg1", new Exception("error"));
+        logger.warn("warn:{}", "arg1", new Exception("warn"));
+        logger.info("info:{}", "arg1", new Exception("info"));
+        logger.debug("debug:{}", "arg1", new Exception("debug"));
+        logger.trace("trace:{}", "arg1", new Exception("trace"));
     }
 
     @ParameterizedTest
     @MethodSource("data")
-    public void testLevelEnable(Class<? extends LoggerAdapter> loggerAdapter) throws IllegalAccessException, InstantiationException {
-        LoggerAdapter adapter = loggerAdapter.newInstance();
+    void testLevelEnable(Class<? extends LoggerAdapter> loggerAdapter)
+            throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+        LoggerAdapter adapter = loggerAdapter.getDeclaredConstructor().newInstance();
         adapter.setLevel(Level.ALL);
         Logger logger = adapter.getLogger(this.getClass());
         assertThat(logger.isWarnEnabled(), not(nullValue()));
